--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:</p>
 <ul>
 <li>
-<p>Email address</p>
+<p>Enphase login (email address and Enphase password)</p>
 </li>
 <li>
 <p>Address, State, Province, ZIP/Postal code, City</p>
@@ -73,7 +73,7 @@
 <p>The Company may use Personal Data for the following purposes:</p>
 <ul>
 <li>
-<p><strong>To provide and maintain our Service</strong>, including to monitor the usage of our Service.</p>
+<p><strong>To provide and maintain our Service</strong>, including to monitor the usage of our Service. The Enphase login is used to access to your photovoltaic panels data.</p>
 </li>
 <li>
 <p><strong>To manage Your Account:</strong> to manage Your registration as a user of the Service. The Personal Data You provide can give You access to different functionalities of the Service that are available to You as a registered user.</p>
@@ -109,6 +109,7 @@
 <h3>Retention of Your Personal Data</h3>
 <p>The Company will retain Your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use Your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes, and enforce our legal agreements and policies.</p>
 <p>The Company will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of Our Service, or We are legally obligated to retain this data for longer time periods.</p>
+<p>Your Enphase login is only stored on your device and aren't known or sent to us. It's the same thing for your location and the location of your photovoltaic panels, they are only stored on your device and aren't known or sent to us.</p>
 <h3>Transfer of Your Personal Data</h3>
 <p>Your information, including Personal Data, is processed at the Company's operating offices and in any other places where the parties involved in the processing are located. It means that this information may be transferred to — and maintained on — computers located outside of Your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from Your jurisdiction.</p>
 <p>Your consent to this Privacy Policy followed by Your submission of such information represents Your agreement to that transfer.</p>
